--- a/css/styles.css
+++ b/css/styles.css
@@ -1029,3 +1029,25 @@ header {
     color: #000000;
     text-decoration: none;
 }
+
+
+
+
+.volume {
+}
+.cont {
+}
+.volume_title {
+}
+.title {
+}
+.volume_items {
+}
+.volume_item {
+}
+.volume_item-img {
+}
+.volume_item-title {
+}
+.volume_item-text {
+}
