--- a/css/styles.css
+++ b/css/styles.css
@@ -1136,8 +1136,6 @@ footer {
     padding: 80px 0 48px;
     background: #333333;
 }
-.cont {
-}
 .footer_wrap {
     display: flex;
 }
@@ -1145,25 +1143,69 @@ footer {
     display: flex;
     flex-wrap: wrap;
     width: 706px;
-    gap: 115px;
+    justify-content: space-between;
+    flex-shrink: 0;
 }
 .footer_items > * {
-    width: calc(100%/4 - 100px);
+    
 }
 .footer_item:last-child {
     width: 100%;
 }
 .footer_item-title {
+    font-family: 'Gilroy';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFFFF;
+    margin-bottom: 15px;
 }
 .footer_item-text {
+    font-family: 'Gilroy';
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    color: #FFFFFF;
+    text-decoration: none;
+    white-space: nowrap;
 }
 .footer_item-copy {
+    font-family: 'Gilroy';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFFFF;
 }
 .footer_info {
+    margin-left: -150px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 .footer_soc {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    margin-bottom: 57px;
 }
 .footer_text-big {
+    font-family: 'Gilroy';
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+    max-width: 472px;
+}
+.footer_text-big span {
+    font-weight: 700;
+    color: #EB6537;    
 }
 .footer_text-small {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 14px;
+    color: #FFFFFF;
+    font-family: 'Gilroy';
+    max-width: 472px;
 }
