--- a/css/response_1187.css
+++ b/css/response_1187.css
@@ -1,31 +1,15 @@
 @media print, (max-width: 1187px) {
 
-    .advantages_items > * {
-        width: calc(100% / 2 - 15px);
-    }
-    .service_item-img {
-        width: 160px;
-        height: 160px;
-    }
-    .service_item-info {
-        width: calc(100% - 190px);
-    }
-    .reason_items > * {
-        padding: 20px;
-    }
-    .reason_item-img {
-        width: 160px;
-        height: 160px;
-    }
-    .partner_items > * {
-        width: calc(100% / 3 - 46px);
-        display: flex;
-        justify-content: center;
-    }
-    .calculator_left {
-        width: calc(100% - 530px);
-    }
 
+    .first-section_info-title {
+        font-size: 58px;
+    }
+    .first-section_info-title span {
+        font-size: 35px;
+    }
+    .first-section_img {
+        margin-left: 0;
+    }
 
 
 
