--- a/css/response_1023.css
+++ b/css/response_1023.css
@@ -1,90 +1,63 @@
 @media print, (max-width: 1023px) {
  
-
-    header .menu {
-        display: none;
+    .first-section_title {
+        font-size: 26px;
     }
     .first-section_img {
-        display: none;
+        width: 255px;
     }
-    .first-section_text {
-        max-width: 100%;
-    }
-    .service_items > * {
-        width: 100%;
-        min-height: 100%;
-    }
-    .service_item-img {
-        width: 230px;
-        height: 230px;
-    }
-    .service_item-info {
-        width: calc(100% - 200px);
-    }
-    .first-section_wrap {
-        padding: 58px 25px 50px;
-        background: #F7F6F9;
-        border: 0.5px solid #E0E0E0;
-        border-radius: 5px;
+    .first-section_img:before {
+        width: 93px;
+        height: 93px;
+        background-size: cover;
+        top: -12px;
+        right: -14px;
     }
     .first-section_info {
-        margin-top: 0;
-        margin-bottom: 0;
+        width: calc(100% - 320px);
+        margin-top: 26px;
     }
-    .first-section {
-        margin-bottom: 55px;
+    .first-section_items {
+        margin-bottom: 65px;
+        margin-top: 50px;
     }
-    .first-section_title {
-        font-size: 36px;
+    .first-section_items {
+        justify-content: space-between;
     }
-    .advantages_items > * {
-        padding: 15px;
+    .first-section_items > * {
+        width: calc(100% / 2 - 20px);
+    }
+    .first-section_info-text {
+        font-size: 18px;
+    }
+    .first-section_info-title {
+        margin-bottom: 35px;
     }
     .block {
-        margin-top: 70px;
+        padding: 60px 0;
     }
     .title {
         font-size: 30px;
-        margin-bottom: 30px;
+        margin: 0 auto 36px;
     }
-    .reason_items > * {
+    .about ul {
+        column-gap: 20px;
+        row-gap: 20px;
+    }
+    .about ul > * {
         width: calc(100% / 2 - 10px);
     }
-    .stage_items > * {
-        width: 100%;
-        padding: 20px;
+    .denial_text {
+        margin-bottom: 30px;
     }
-    .consultation_box {
-        max-width: 680px;
+    .price_items {
+        column-gap: 20px;
+        row-gap: 20px;
     }
-    .partner_info {
-        display: none;
-    }
-    .contact_wrap {
-        flex-direction: column;
-    }
-    .map_wrap {
-        width: 100%;
-        height: 300px;
-    }
-    .contact_left {
+    .price_items > * {
         width: 100%;
     }
-    .contact_left-text p + p {
-        margin-top: 15px;
-    }
-    .contact_bottom .contact_left {
-        display: none;
-    }
-    .contact_bottom {
-        margin-top: 0;
-    }
-    .calculator_wrap form {
-        flex-direction: column;
-    }
-    .calculator_left {
-        width: 100%;
-    }
+  
 
 
 
