--- a/css/response_1023.css
+++ b/css/response_1023.css
@@ -25,7 +25,7 @@
         justify-content: space-between;
     }
     .first-section_items > * {
-        width: calc(100% / 2 - 20px);
+        width: calc(100% / 2 - 10px);
     }
     .first-section_info-text {
         font-size: 18px;
@@ -64,12 +64,12 @@
     .footer_info {
         position: relative;
         flex-direction: row;
-        align-items: center;
+        align-items: flex-start;
         margin-top: 0;
-        gap: 60px;
+        gap: 30px;
     }
     .footer_info > * {
-        width: calc(100%/2 - 30px);
+        width: calc(100%/2 - 15px);
     }
     .footer_wrap {
         flex-direction: column;
@@ -87,7 +87,7 @@
     }
     .footer_items > *,
     .footer_item:last-child {
-        width: calc(100%/2 - 30px);
+        width: calc(100%/2 - 10px);
     }
     .footer_item-copy {
         margin-top: 0;
@@ -100,6 +100,7 @@
     .footer_text-small {
         max-width: 258px;
     }
+  
 
 
     
