--- a/css/response_479.css
+++ b/css/response_479.css
@@ -1,119 +1,157 @@
 @media (max-width: 479px) {
 
-
+    .header_logo img {
+        width: 27px;
+        height: 30px;
+    }
     .header_logo {
-        width: 87px;
-        height: 45px;
+        gap: 10px;
     }
-    .header_phone {
-        font-size: 20px;
+    .header_callback {
+        gap: 4px;
     }
-    .header_phone span {
-        font-size: 10px;
+    .first-section_title {
+        font-size: 16px;
+        margin-bottom: 20px;
     }
-    .cont {
-        padding: 0 10px;
-    }
-    header {
-        padding: 12px 0 20px;
-        background: #fff;
-    }
-    .first-section ul li {
-        font-size: 12px;
-    }
-    .first-section ul li:before {
-        top: 4px;
-    }
-    .first-section ul {
-        margin-bottom: 70px;
-    }
-    .advantages_item-title {
-        font-size: 14px;
-    }
-    .advantages_item-text {
-        font-size: 12px;
+    .first-section_info-text {
+        margin-bottom: 20px;
     }
     .title {
         font-size: 20px;
+        margin-bottom: 30px;
     }
-    .service_item-img {
-        width: 170px;
-        height: 170px;
+    .contents .accordion_item-title {
+        font-size: 16px;
     }
-    .service_item-title {
-        font-size: 14px;
-        margin-bottom: 10px;
+    .contents .accordion_item-head {
+        padding: 1px 15px 1px 15px;
     }
-    .service_item-text {
-        font-size: 12px;
-        margin-bottom: 10px;
+    .contents .accordion_item-title b {
+        font-size: 45px;
+        line-height: 61px;
     }
-    .service_items > * {
-        padding: 35px 25px;
+    .contents .accordion_item-title span {
+        margin-right: 20px;
     }
-    .btn {
+    .contents .accordion_item-title b {
+        margin-right: 10px;
+    }
+    .contents .accordion_item-data {
+        padding: 10px 5px 15px 5px;
+    }
+    .contents .accordion_item + .accordion_item {
+        margin-top: 10px;
+    }
+    .contents_btns {
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 20px;
+    }
+    .btn-orange {
         width: 100%;
     }
-    .stage_item-number {
-        width: 55px;
-        height: 51px;
+    .btn-white {
+        width: 100%;
     }
-    .stage_item-title {
+    .need_title {
+        margin-bottom: 15px;
+    }
+    .need_text {
         font-size: 14px;
+        line-height: 1.2;
+        margin-bottom: 30px;
     }
-    .stage_item-top {
-        margin-bottom: 10px;
+    .denial_text {
+        font-size: 16px;
     }
-    .stage_item-text {
-        font-size: 12px;
+    .book_text-big {
+        font-size: 16px;
     }
-    .stage_items {
+    .book_text-average {
+        font-size: 14px;
+        margin-bottom: 30px;
+    }
+    .book_text-small {
+        margin-top: 20px;
+    }
+    .book_wrap {
+        padding-bottom: 30px;
+        margin-bottom: 20px;
+    }
+    .book_wrap {
         gap: 10px;
     }
-    .accordion_item-data {
-        padding: 10px;
-        font-size: 12px;
+    .book_bottom {
+        flex-direction: column;
+        gap: 10px;
     }
-    .accordion_item-title {
+    .book_bottom-info p:last-child {
         font-size: 14px;
     }
-    .accordion_item .accordion_item-icon-plus,
-    .accordion_item .accordion_item-icon-minus {
-        font-size: 25px;
+    .book_bottom a {
+        font-size: 16px;
     }
-    .reviews_item-avatar {
-        width: 70px;
-        height: 70px;
+    .book_box {
+        padding: 60px 10px;
     }
-    .reviews_item-name {
-        font-size: 14px;
-        font-weight: 700;
+    .volume_items > * {
+        width: 100%;
     }
-    .reviews_item-author {
-        gap: 15px;
+    .volume_item-img {
+        width: 180px;
+        height: 261px;
+        margin-bottom: 10px;
     }
-    .reviews_item-text {
-        font-size: 12px;
+    .swiper-button-next, 
+    .swiper-button-prev {
+        width: 30px;
+        height: 30px;
+        top: auto;
+        bottom: -50px;
     }
-    .reviews_item-link {
-        margin-top: 15px;
+    .swiper-button-next img, 
+    .swiper-button-prev img {
+        width: 14px;
+        height: auto;
     }
-    .contact_left-text {
-        font-size: 12px;
+    .swiper-button-prev {
+        left: calc(50% - 50px);
     }
-    .contact_left-item-label {
-        font-size: 14px;
+    .swiper-button-next {
+        right: calc(50% - 50px);
     }
-    .contact_left-item-text {
-        font-size: 12px;
+    .reviews_wrap {
+        max-width: 100%;
     }
-    .contact_left-item-text.phone {
-        font-size: 20px;
-        color: #F36F21;
+    .need_img-mob {
+        display: block;
+        width: 100%;
+        height: auto;
+        margin-bottom: 20px;
     }
-    .contact_right-text {
-        font-size: 7px;
+    .need_img {
+        display: none;
     }
+    .need_img-mob img {
+        width: 100%;
+        height: auto;
+    }
+    .faq .accordion_item-head {
+        padding: 10px 20px 10px 10px;
+    }        
+    .faq .accordion_item-data {
+        padding: 10px 20px 10px 10px;
+    }
+    footer {
+        padding: 60px 0;
+    }
+    .footer_item:last-child {
+        order: -1;
+        width: 100%;
+    }
+ 
+
 
 
 
