--- a/css/styles.css
+++ b/css/styles.css
@@ -542,6 +542,21 @@ header {
     justify-content: center;
     text-decoration: none;
 }
+.btn-white2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+    width: 290px;
+    height: 65px;
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 130%;
+    color: #E95D1F;
+    text-decoration: none;
+}
 .btn-white {
     display: flex;
     flex-direction: row;
@@ -610,32 +625,42 @@ header {
 }
 .about ul > * {
     width: calc(100%/3 - 27px);
-    padding-left: 55px;
     position: relative;
     font-family: 'Gilroy';
     font-weight: 400;
     font-size: 16px;
     line-height: 130%;
     color: #333333;
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
-.about ul li::before {
-    counter-increment: section;
-    content: counter(section) "";
-    position: absolute;
-    background: #E95D1F;
+.about ul li i {
+    display: block;
+    position: relative;
+    z-index: 2;
     width: 35px;
-    height: 35px;
+    height: 35px;    
     border-radius: 50%;
+    background: #E95D1F;
     display: flex;
     align-items: center;
     justify-content: center;
-    left: 0;
-    top: 4px;
+    flex-shrink: 0;
+}
+.about ul li i:before {
+    counter-increment: section;
+    content: counter(section) "";
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: 'Gilroy';
     font-weight: 700;
     font-size: 16px;
     line-height: 19px;
     color: #FFFFFF;
+    font-style: normal;
 }
 
 
@@ -670,6 +695,7 @@ header {
     align-items: center;
     justify-content: space-between; 
     cursor: pointer;
+    gap: 5px;
 }
 .accordion_item-title {
     font-family: 'Gilroy';
@@ -1036,6 +1062,7 @@ header {
     line-height: 130%;
     color: #000000;
     text-decoration: none;
+    white-space: nowrap;
 }
 
 
@@ -1089,6 +1116,9 @@ header {
     width: 100%;
     height: 100%;
 }
+.need_img-mob {
+    display: none;
+}
 
 
 .faq .accordion {
@@ -1130,7 +1160,7 @@ header {
 }
 .faq .accordion_item-data {
     display: none;
-    padding: 10px 58px 30px 45px;
+    padding: 10px 58px 30px 55px;
     background: #ECF1F2;
     font-family: 'Gilroy';
     font-weight: 400;
@@ -1190,8 +1220,8 @@ header {
     font-size: 16px;
     line-height: 19px;
     color: #000000;
-    padding-left: 15px;
     border-bottom: none;
+    padding: 0;
 }
 .faq .accordion_item-data ol li::before {
     counter-increment: section3;
@@ -1201,6 +1231,9 @@ header {
     font-size: 16px;
     line-height: 19px;
     color: #000000;
+}
+.faq .accordion_item-data ol li + li {
+    margin-top: 15px;
 }
 
 
