--- a/css/response_767.css
+++ b/css/response_767.css
@@ -80,6 +80,7 @@
     .first-section_img {
         margin: 0 auto;
         width: 290px;
+        height: 415px;
     }
     .first-section_info-title {
         font-size:45px;
