--- a/css/response_479.css
+++ b/css/response_479.css
@@ -150,7 +150,34 @@
         order: -1;
         width: 100%;
     }
- 
+    .footer_items {
+        gap: 20px;
+        margin-bottom: 35px;
+    }
+    .footer_item-title {
+        font-size: 14px;
+        margin-bottom: 5px;
+    }
+    .footer_item-text {
+        font-size: 14px;
+    }
+    .footer_item-copy {
+        font-size: 14px;
+    }
+    .footer_info {
+        gap: 20px;
+        flex-direction: column;
+    }
+    .footer_text-small {
+        max-width: 270px;
+        font-size: 8px;
+    }
+    .footer_info > * {
+        width: 100%;
+    }
+    .footer_item:nth-child(2) {
+        order: 1;
+    }
 
 
 
