--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ input[type=number] {
 @font-face {
     font-family: 'Gilroy';
     src: url('../fonts/Gilroy-Regular.eot');
-    src: local('Gilroy Regular'), local('Gilroy-Regular'),
+    src: local('Gilroy-Regular'),
         url('../fonts/Gilroy-Regular.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Gilroy-Regular.woff') format('woff'),
         url('../fonts/Gilroy-Regular.ttf') format('truetype');
