--- a/css/styles.css
+++ b/css/styles.css
@@ -146,11 +146,11 @@ input[type=number] {
 
 @font-face {
     font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-Regular.eot');
+    src: url('../fonts/gilroy-regular.eot');
     src: local('Gilroy-Regular'),
-        url('../fonts/Gilroy-Regular.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Gilroy-Regular.woff') format('woff'),
-        url('../fonts/Gilroy-Regular.ttf') format('truetype');
+        url('../fonts/gilroy-regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/gilroy-regular.woff') format('woff'),
+        url('../fonts/gilroy-regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
